# otool-rs

./: Cargo.toml  readme.md
.github/workflows/: ci.yml  release.yml
ci/: cargo-out-dir  ubuntu-install-packages
src/: main.rs
