[package]
name = "otool"
version = "0.1.0"
authors = ["Flier Lu <flier.lu@gmail.com>", "Kenan Sulayman <kenan@sig.dev>"]
description = "(Mach-O File Format)"
documentation = "https://github.com/19h/otool-rs"
homepage = "https://github.com/19h/otool-rs"
repository = "https://github.com/19h/otool-rs"
license = "Apache-2.0"
edition = "2018"

[dependencies]
log = "0.4"
libc = "0.2"
byteorder = "1.3"
failure = "0.1"
uuid = "0.8"
time = "0.1"
bitflags = "1.0"
lazy_static = "1.0"
pretty_env_logger = "0.3"
diff = "0.1"
structopt = "0.3"
memmap = "0.7"
hexplay = "0.2"
walkdir = "2.2"
mach_object = "0.1.14"
