[package]
name = "otool"
version = "0.1.2-alpha.0"
authors = ["Flier Lu <flier.lu@gmail.com>", "Kenan Sulayman <kenan@sig.dev>"]
description = "The otool command displays specified parts of object files or libraries. (Mach-O File Format)"
documentation = "https://github.com/19h/otool-rs"
homepage = "https://github.com/19h/otool-rs"
repository = "https://github.com/19h/otool-rs"
license = "Apache-2.0"
readme = "readme.md"
edition = "2018"

[dependencies]
log = "0.4.8"
libc = "0.2.71"
byteorder = "1.3.4"
failure = "0.1.8"
uuid = "0.8.1"
time = "0.2.16"
bitflags = "1.2.1"
lazy_static = "1.4.0"
pretty_env_logger = "0.4.0"
diff = "0.1.12"
structopt = "0.3.15"
memmap = "0.7.0"
hexplay = "0.2.1"
walkdir = "2.3.1"
mach_object = "0.1.14"
clap = "2.33.1"

[[bin]]
bench = false
path = "src/main.rs"
name = "otool"

[profile]

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = true
opt-level = 3
panic = "abort"
rpath = false
